--- a/index.html
+++ b/index.html
@@ -6,11 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Game Development</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <canvas id="canvas1"></canvs>
+    <div class="links">
+        <a href="/animations">Sprite Animations</a>
+        <a href="/parallax">Parallax</a>
+    </div>
 </body>
-<script src="script.js"></script>
 
 </html>
