add enemy-movement project

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <div class="links">
         <a href="/animations">Sprite Animations</a>
         <a href="/parallax">Parallax</a>
+        <a href="/enemy-movement-patterns">Enemy Movement Patterns</a>
     </div>
 </body>
 
