add making-rays project

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <a href="/animations">Sprite Animations</a>
         <a href="/parallax">Parallax</a>
         <a href="/enemy-movement-patterns">Enemy Movement Patterns</a>
+        <a href="/making-rays">Making Rays</a>
     </div>
 </body>
 
