update to relative links

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 
 <body>
     <div class="links">
-        <a href="/animations">Sprite Animations</a>
-        <a href="/parallax">Parallax</a>
-        <a href="/enemy-movement-patterns">Enemy Movement Patterns</a>
-        <a href="/making-rays">Making Rays</a>
+        <a href="animations">Sprite Animations</a>
+        <a href="parallax">Parallax</a>
+        <a href="enemy-movement-patterns">Enemy Movement Patterns</a>
+        <a href="making-rays">Making Rays</a>
     </div>
 </body>
 
