--- a/making-rays/index.html
+++ b/making-rays/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Making Rays</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -41,10 +41,10 @@
         </div>
     </div>
 </body>
-<script src="./vector2.js"></script>
-<script src="./wall.js"></script>
-<script src="./ray.js"></script>
-<script src="./particle.js"></script>
-<script src="./script.js"></script>
+<script src="vector2.js"></script>
+<script src="wall.js"></script>
+<script src="ray.js"></script>
+<script src="particle.js"></script>
+<script src="script.js"></script>
 
 </html>
