--- a/enemy-movement-patterns/index.html
+++ b/enemy-movement-patterns/index.html
@@ -6,13 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Enemy Movement Patterns</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <p>FPS: <span id="fps"></span></p>
     <canvas id="canvas"></canvas>
 </body>
-<script src="./script.js"></script>
+<script src="script.js"></script>
 
 </html>
