--- a/parallax/index.html
+++ b/parallax/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Parallax Backgrounds</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -16,6 +16,6 @@
         <input type="range" min="0" max="20" value="5" class="slider" id="slider">
     </div>
 </body>
-<script src="./script.js"></script>
+<script src="script.js"></script>
 
 </html>
