implemented basic raycast method

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <a href="parallax">Parallax</a>
         <a href="enemy-movement-patterns">Enemy Movement Patterns</a>
         <a href="making-rays">Making Rays</a>
+        <a href="lighting">Lighting</a>
     </div>
 </body>
 
