add fps counter

--- a/lighting/index.html
+++ b/lighting/index.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+    <p id="fps-container">FPS: <span id="fps"></span></p>
     <canvas id="canvas"></canvas>
 </body>
 <script src="map.js"></script>
