--- a/lighting/index.html
+++ b/lighting/index.html
@@ -10,7 +10,13 @@
 </head>
 
 <body>
-    <p id="fps-container">FPS: <span id="fps"></span></p>
+    <div id="ui-container">
+        <p>FPS: <span id="fps"></span></p>
+        <div id="numBoxesContainer">
+            <label for="numBoxes">Boxes:</label>
+            <input type="range" id="numBoxes" name="numBoxes" min="1" max="20" value="4">
+        </div>
+    </div>
     <canvas id="canvas"></canvas>
 </body>
 <script src="map.js"></script>
