create clamp utility function

--- a/lighting/index.html
+++ b/lighting/index.html
@@ -19,6 +19,7 @@
     </div>
     <canvas id="canvas"></canvas>
 </body>
+<script src="utils.js"></script>
 <script src="map.js"></script>
 <script src="box.js"></script>
 <script src="light.js"></script>
