ball bounce simulation - somewhat accurate

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <a href="enemy-movement-patterns">Enemy Movement Patterns</a>
         <a href="making-rays">Making Rays</a>
         <a href="lighting">Lighting</a>
+        <a href="bouncing">Bouncing</a>
     </div>
 </body>
 
