--- a/bouncing/index.html
+++ b/bouncing/index.html
@@ -12,6 +12,8 @@
 <body>
     <canvas id="canvas"></canvas>
 </body>
+
+<script src="Ball.js"></script>
 <script src="script.js"></script>
 
 </html>
