boilerplate for animations on trigger

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <a href="making-rays">Making Rays</a>
         <a href="lighting">Lighting</a>
         <a href="bouncing">Bouncing</a>
+        <a href="animations-on-trigger">Animations on Trigger</a>
     </div>
 </body>
 
