completed animations on trigger project

--- a/animations-on-trigger/index.html
+++ b/animations-on-trigger/index.html
@@ -12,6 +12,7 @@
 <body>
     <canvas id="canvas"></canvas>
 </body>
+<script src="Explosion.js"></script>
 <script src="script.js"></script>
 
 </html>
