point and shoot game checkpoint

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <a href="lighting">Lighting</a>
         <a href="bouncing">Bouncing</a>
         <a href="animations-on-trigger">Animations on Trigger</a>
+        <a href="point-and-shoot-game">Point and Shoot Game</a>
     </div>
 </body>
 
