completed point and shoot project

--- a/point-and-shoot-game/index.html
+++ b/point-and-shoot-game/index.html
@@ -16,6 +16,7 @@
 
 <script src="Raven.js"></script>
 <script src="Explosion.js"></script>
+<script src="Particle.js"></script>
 <script src="script.js"></script>
 
 </html>
