box breathing initial commit
lots of cleanup to do :)

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <a href="bouncing">Bouncing</a>
         <a href="animations-on-trigger">Animations on Trigger</a>
         <a href="point-and-shoot-game">Point and Shoot Game</a>
+        <a href="box-breathing">Box Breathing</a>
     </div>
 </body>
 
