--- a/box-breathing/index.html
+++ b/box-breathing/index.html
@@ -12,6 +12,9 @@
 <body>
     <canvas id="canvas"></canvas>
 </body>
+<script src="BreathingCircle.js"></script>
+<script src="TextSeconds.js"></script>
+<script src="TextInstructions.js"></script>
 <script src="script.js"></script>
 
 </html>
