--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <a href="animations-on-trigger">Animations on Trigger</a>
         <a href="point-and-shoot-game">Point and Shoot Game</a>
         <a href="box-breathing">Box Breathing</a>
+        <a href="enemy-variety">Enemy Variety</a>
     </div>
 </body>
 
