side scroller work in progress

--- a/index.html
+++ b/index.html
@@ -10,18 +10,19 @@
 </head>
 
 <body>
-    <div class="links">
-        <a href="animations">Sprite Animations</a>
-        <a href="parallax">Parallax</a>
-        <a href="enemy-movement-patterns">Enemy Movement Patterns</a>
-        <a href="making-rays">Making Rays</a>
-        <a href="lighting">Lighting</a>
-        <a href="bouncing">Bouncing</a>
-        <a href="animations-on-trigger">Animations on Trigger</a>
-        <a href="point-and-shoot-game">Point and Shoot Game</a>
-        <a href="box-breathing">Box Breathing</a>
-        <a href="enemy-variety">Enemy Variety</a>
-    </div>
+    <ul class="links">
+        <li><a href="animations">Sprite Animations</a></li>
+        <li><a href="parallax">Parallax</a></li>
+        <li><a href="enemy-movement-patterns">Enemy Movement Patterns</a></li>
+        <li><a href="making-rays">Making Rays</a></li>
+        <li><a href="lighting">Lighting</a></li>
+        <li><a href="bouncing">Bouncing</a></li>
+        <li><a href="animations-on-trigger">Animations on Trigger</a></li>
+        <li><a href="point-and-shoot-game">Point and Shoot Game</a></li>
+        <li><a href="box-breathing">Box Breathing</a></li>
+        <li><a href="enemy-variety">Enemy Variety</a></li>
+        <li><a href="side-scroller">Side Scroller</a></li>
+    </ul>
 </body>
 
 </html>
