Part 1 of Side Scroller complete

--- a/side-scroller/index.html
+++ b/side-scroller/index.html
@@ -18,6 +18,7 @@
     <script src="InputHandler.js"></script>
     <script src="Player.js"></script>
     <script src="Enemy.js"></script>
+    <script src="Background.js"></script>
     <script src="script.js"></script>
 </body>
 
