completed side scroller project

--- a/side-scroller/index.html
+++ b/side-scroller/index.html
@@ -14,6 +14,7 @@
     <img id="backgroundImage" src="images/background.png">
     <img id="playerImage" src="images/player.png">
     <img id="enemyImage" src="images/enemy.png">
+    <button id="fullScreenButton">Toggle Full Screen</button>
 
     <script src="InputHandler.js"></script>
     <script src="Player.js"></script>
