--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <li><a href="box-breathing">Box Breathing</a></li>
         <li><a href="enemy-variety">Enemy Variety</a></li>
         <li><a href="side-scroller">Side Scroller</a></li>
+        <li><a href="state-management">State Management</a></li>
     </ul>
 </body>
 
