endless runner game checkpoint

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         <li><a href="enemy-variety">Enemy Variety</a></li>
         <li><a href="side-scroller">Side Scroller</a></li>
         <li><a href="state-management">State Management</a></li>
+        <li><a href="endless-runner-game">Endless Runner Game</a></li>
     </ul>
 </body>
 
