--- a/endless-runner-game/index.html
+++ b/endless-runner-game/index.html
@@ -12,6 +12,11 @@
 <body>
     <canvas id="canvas"></canvas>
     <img id="player" src="assets/player.png">
+    <img id="backgroundLayer1" src="assets/cityBackground/layer-1.png">
+    <img id="backgroundLayer2" src="assets/cityBackground/layer-2.png">
+    <img id="backgroundLayer3" src="assets/cityBackground/layer-3.png">
+    <img id="backgroundLayer4" src="assets/cityBackground/layer-4.png">
+    <img id="backgroundLayer5" src="assets/cityBackground/layer-5.png">
     <script type="module" src="script.js"></script>
 </body>
 
