add plant and fly enemies

--- a/endless-runner-game/index.html
+++ b/endless-runner-game/index.html
@@ -11,12 +11,19 @@
 
 <body>
     <canvas id="canvas"></canvas>
+    <!-- Pre-Load Assets -->
     <img id="player" src="assets/player.png">
+
     <img id="backgroundLayer1" src="assets/cityBackground/layer-1.png">
     <img id="backgroundLayer2" src="assets/cityBackground/layer-2.png">
     <img id="backgroundLayer3" src="assets/cityBackground/layer-3.png">
     <img id="backgroundLayer4" src="assets/cityBackground/layer-4.png">
     <img id="backgroundLayer5" src="assets/cityBackground/layer-5.png">
+
+    <img id="enemyFly" src="assets/enemies/enemy_fly.png">
+    <img id="enemyPlant" src="assets/enemies/enemy_plant.png">
+    <img id="enemySpiderBig" src="assets/enemies/enemy_spider_big.png">
+
     <script type="module" src="script.js"></script>
 </body>
 
