endless runner game interim commit

--- a/endless-runner-game/index.html
+++ b/endless-runner-game/index.html
@@ -13,6 +13,7 @@
     <canvas id="canvas"></canvas>
     <!-- Pre-Load Assets -->
     <img id="player" src="assets/player.png">
+    <img id="playerFire" src="assets/fire.png">
 
     <img id="backgroundLayer1" src="assets/cityBackground/layer-1.png">
     <img id="backgroundLayer2" src="assets/cityBackground/layer-2.png">
@@ -23,6 +24,7 @@
     <img id="enemyFly" src="assets/enemies/enemy_fly.png">
     <img id="enemyPlant" src="assets/enemies/enemy_plant.png">
     <img id="enemySpiderBig" src="assets/enemies/enemy_spider_big.png">
+
 
     <script type="module" src="script.js"></script>
 </body>
