--- a/endless-runner-game/index.html
+++ b/endless-runner-game/index.html
@@ -14,6 +14,7 @@
     <!-- Pre-Load Assets -->
     <img id="player" src="assets/player.png">
     <img id="playerFire" src="assets/fire.png">
+    <img id="playerBoom" src="assets/boom.png">
 
     <img id="backgroundLayer1" src="assets/cityBackground/layer-1.png">
     <img id="backgroundLayer2" src="assets/cityBackground/layer-2.png">
