completed endless runner game

--- a/endless-runner-game/index.html
+++ b/endless-runner-game/index.html
@@ -15,6 +15,7 @@
     <img id="player" src="assets/player.png">
     <img id="playerFire" src="assets/fire.png">
     <img id="playerBoom" src="assets/boom.png">
+    <img id="playerLife" src="assets/lives.png">
 
     <img id="backgroundLayer1" src="assets/cityBackground/layer-1.png">
     <img id="backgroundLayer2" src="assets/cityBackground/layer-2.png">
