--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         <li><a href="side-scroller">Side Scroller</a></li>
         <li><a href="state-management">State Management</a></li>
         <li><a href="endless-runner-game">Endless Runner Game</a></li>
+        <li><a href="pong">Pong</a></li>
     </ul>
 </body>
 
