add audio, refactor states

--- a/pong/index.html
+++ b/pong/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,8 +8,13 @@
     <link rel="stylesheet" href="style.css">
     <title>Pong</title>
 </head>
+
 <body>
     <canvas id="canvas"></canvas>
+    <audio id="paddleHitSound" src="assets/sounds/paddle_hit.wav"></audio>
+    <audio id="wallHitSound" src="assets/sounds/wall_hit.wav"></audio>
+    <audio id="scoreSound" src="assets/sounds/score.wav"></audio>
     <script type="module" src="main.js"></script>
 </body>
+
 </html>
