set up scaffolding for flappy bird project

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         <li><a href="state-management">State Management</a></li>
         <li><a href="endless-runner-game">Endless Runner Game</a></li>
         <li><a href="pong">Pong</a></li>
+        <li><a href="flappy-bird">Flappy Bird</a></li>
     </ul>
 </body>
 
