import images in html

--- a/flappy-bird/index.html
+++ b/flappy-bird/index.html
@@ -9,6 +9,8 @@
 </head>
 <body>
     <canvas id="canvas"></canvas>
+    <img id="backgroundImage" src="assets/images/background.png">
+    <img id="groundImage" src="assets/images/ground.png">
     <script type="module" src="script.js"></script>
 </body>
 </html>
