add bird image to html

--- a/flappy-bird/index.html
+++ b/flappy-bird/index.html
@@ -11,6 +11,7 @@
     <canvas id="canvas"></canvas>
     <img id="backgroundImage" src="assets/images/background.png">
     <img id="groundImage" src="assets/images/ground.png">
+    <img id="birdImage" src="assets/images/bird.png">
     <script type="module" src="script.js"></script>
 </body>
 </html>
