add test pipe image

--- a/flappy-bird/index.html
+++ b/flappy-bird/index.html
@@ -12,6 +12,7 @@
     <img id="backgroundImage" src="assets/images/background.png">
     <img id="groundImage" src="assets/images/ground.png">
     <img id="birdImage" src="assets/images/bird.png">
+    <img id="pipeImage" src="assets/images/pipe.png">
     <script type="module" src="script.js"></script>
 </body>
 </html>
