add background music

--- a/flappy-bird/index.html
+++ b/flappy-bird/index.html
@@ -9,10 +9,20 @@
 </head>
 <body>
     <canvas id="canvas"></canvas>
+    <!-- IMAGES -->
     <img id="backgroundImage" src="assets/images/background.png">
     <img id="groundImage" src="assets/images/ground.png">
     <img id="birdImage" src="assets/images/bird.png">
     <img id="pipeImage" src="assets/images/pipe.png">
+    
+    <!-- SOUNDS -->
+    <audio id="jumpSound" src="assets/sounds/jump.wav"></audio>
+    <audio id="explosionSound" src="assets/sounds/explosion.wav"></audio>
+    <audio id="hurtSound" src="assets/sounds/hurt.wav"></audio>
+    <audio id="scoreSound" src="assets/sounds/score.wav"></audio>
+    <audio id="musicSound" src="assets/sounds/marios_way.mp3"></audio>
+
+    <!-- MAIN SCRIPT -->
     <script type="module" src="script.js"></script>
 </body>
 </html>
