create basic scaffolding for breakout

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         <li><a href="endless-runner-game">Endless Runner Game</a></li>
         <li><a href="pong">Pong</a></li>
         <li><a href="flappy-bird">Flappy Bird</a></li>
+        <li><a href="breakout">Breakout</a></li>
     </ul>
 </body>
 
