--- a/breakout/index.html
+++ b/breakout/index.html
@@ -16,7 +16,7 @@
     <img id="arrows-image" src="graphics/arrows.png">
     <img id="background-image" src="graphics/background.png">
     <img id="blocks-image" src="graphics/blocks.png">
-    <img id="breakout-image" src="graphics/breakout.png">
+    <img id="main-image" src="graphics/main.png">
     <img id="hearts-image" src="graphics/hearts.png">
     <img id="particle-image" src="graphics/particle.png">
     <img id="ui-image" src="graphics/ui.png">
