--- a/tools/index.html
+++ b/tools/index.html
@@ -6,13 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Game Development</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
 </head>
 
 <body>
     <ul class="links">
-        <li><a href="games">Games</a></li>
-        <li><a href="tools">Tools</a></li>
+        <li><a href="coffee">Coffee</a></li>
+    </ul>
 </body>
 
 </html>
