--- a/tools/index.html
+++ b/tools/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <ul class="links">
-        <li><a href="coffee">Coffee</a></li>
+        <li><a href="chemex">Chemex</a></li>
     </ul>
 </body>
 
