--- a/tools/chemex/index.html
+++ b/tools/chemex/index.html
@@ -58,7 +58,9 @@
     <div class="start-reset-section">
         <button id="timer-button" class="font-medium disable-dbl-tap-zoom">Start</button>
     </div>
-    <audio id="beep" src="beep.mp3" preload="auto"></audio>
+    <audio id="beep">
+        <source src="beep.mp3" type="audio/mpeg">
+    </audio>
     <script src="script.js"></script>
 </body>
 
