--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <ul class="links">
         <li><a href="games">Games</a></li>
         <li><a href="tools">Tools</a></li>
+        <li><a href="box-breathing">Box Breathing</a></li>
 </body>
 
 </html>
