--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Game Development</title>
+    <title>Sandbox</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <ul class="links">
         <li><a href="box-breathing">Box Breathing</a></li>
+        <li><a href="growth-model">Growth Model Simulation</a></li>
 </body>
 
 </html>
