update nature of code work

--- a/nature-of-code/index.html
+++ b/nature-of-code/index.html
@@ -8,8 +8,7 @@
 <body>
     <!-- list of chapters and links to the files in the chapter folder -->
     <ul>
-        <li><a href="chapter-00-introduction/00_01_random_walker/">Example 0.1: Random Walker</a></li>
-        <li><a href="chapter-00-introduction/00_02_random_number_distribution/">Example 0.2: Random Number Distribution</a></li>
+        <li><a href="chapter-00-introduction/index.html">Chapter 00 - Introduction</a></li>
     </ul>
 </body>
 </html>
