--- a/spot-it/intuition.html
+++ b/spot-it/intuition.html
@@ -3,10 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Random Walker - Nature of Code</title>
-    <link rel="stylesheet" href="../../shared/css/style.css">
+    <title>Spot It Intuition</title>
 </head>
 <body>
-    <script type="module" src="script.js"></script>
+    <script src="intuition.js"></script>
 </body>
 </html>
