--- a/nature-of-code/ecosystem-project/index.html
+++ b/nature-of-code/ecosystem-project/index.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Random Number Distribution - Nature of Code</title>
-    <link rel="stylesheet" href="../../shared/css/style.css">
+    <title>Ecosystem Project</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <canvas id="canvas"></canvas>
     <script type="module" src="script.js"></script>
 </body>
 </html>
