--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <ul class="links">
         <li><a href="box-breathing">Box Breathing</a></li>
         <li><a href="growth-model">Growth Model Simulation</a></li>
+        <li><a href="nature-of-code">Nature of Code</a></li>
+    </ul>
 </body>
 
 </html>
