--- a/nature-of-code/index.html
+++ b/nature-of-code/index.html
@@ -6,7 +6,7 @@
     <title>Nature of Code</title>
 </head>
 <body>
-    <!-- list of chapters and links to the files in the chapter folder -->
+    <h1>Nature of Code</h1>
     <ul>
         <li><a href="chapter-00-introduction/index.html">Chapter 00 - Introduction</a></li>
     </ul>
