--- a/nature-of-code/index.html
+++ b/nature-of-code/index.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nature of Code</title>
 </head>
+
 <body>
     <h1>Nature of Code</h1>
     <ul>
         <li><a href="chapter-00-introduction/index.html">Chapter 00 - Introduction</a></li>
+        <li><a href="chapter-01-vectors/index.html">Chapter 01 - Vectors</a></li>
     </ul>
 </body>
+
 </html>
