--- a/nature-of-code/index.html
+++ b/nature-of-code/index.html
@@ -12,6 +12,7 @@
     <ul>
         <li><a href="chapter-00-introduction/index.html">Chapter 00 - Introduction</a></li>
         <li><a href="chapter-01-vectors/index.html">Chapter 01 - Vectors</a></li>
+        <li><a href="chapter-02-forces/index.html">Chapter 02 - Forces</a></li>
     </ul>
 </body>
 
