--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sandbox</title>
-    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+    <h1>Sandbox</h1>
     <ul class="links">
         <li><a href="box-breathing">Box Breathing</a></li>
         <li><a href="growth-model">Growth Model Simulation</a></li>
