--- a/growth-model/index.html
+++ b/growth-model/index.html
@@ -5,18 +5,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Activity Grid</title>
-    <link rel="stylesheet" href="style.css">
+    <style>
+        * {
+            margin: 5px;
+            padding: 0;
+        }
+
+        body {
+            background-color: #f0f0f0;
+        }
+
+        canvas {
+            border: 1px solid black;
+            display: block;
+            margin: auto;
+
+            max-width: 100%;
+            height: auto;
+            touch-action: pinch-zoom;
+        }
+    </style>
     <script src="jswasm/sqlite3.js"></script>
-    <script src="script.js"></script>
 </head>
 
 <body>
-    <h1>Activity Grid</h1>
-    <div class="buttons" id="buttons">
-        <div class="reset" id="resetGrid">Reset</div>
-        <div class="randomize" id="randomizeGrid">Randomize</div>
-    </div>
-    <div class="grid" id="activityGrid"></div>
+    <canvas id="canvas"></canvas>
+    <script src="script.js"></script>
 </body>
 
 </html>
