--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <li><a href="box-breathing">Box Breathing</a></li>
         <li><a href="growth-model">Growth Model Simulation</a></li>
         <li><a href="nature-of-code">Nature of Code</a></li>
+        <li><a href="simulations">Simulations</a></li>
     </ul>
 </body>
 
