Prevent caching when fetching weather data
Appends a timestamp query parameter and sets cache-control headers to ensure the latest weather data is fetched from data.json, avoiding stale responses due to browser caching.

--- a/tools/weather/index.html
+++ b/tools/weather/index.html
@@ -71,7 +71,12 @@
         
         async function loadForecast() {
             try {
-                const response = await fetch('data.json');
+                const response = await fetch(`data.json?t=${Date.now()}`, {
+                    cache: 'no-cache',
+                    headers: {
+                        'Cache-Control': 'no-cache'
+                    }
+                });
                 if (!response.ok) {
                     throw new Error('Failed to fetch data');
                 }
