Improve website navigation and content discoverability
- Add missing top-level navigation links for Games, Tools, and Spot It sections
- Complete section index pages with all available content (games, simulations, tools)
- Add consistent 'Back to Home' navigation and proper headings to all sections
- Remove duplicate box-breathing entry from games section
- Ensure all 30+ games, simulations, and tools are properly linked and accessible

--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
         <li><a href="growth-model">Growth Model Simulation</a></li>
         <li><a href="nature-of-code">Nature of Code</a></li>
         <li><a href="simulations">Simulations</a></li>
+        <li><a href="games">Games</a></li>
+        <li><a href="tools">Tools</a></li>
+        <li><a href="spot-it">Spot It</a></li>
     </ul>
 </body>
 
