--- a/nature-of-code/index.html
+++ b/nature-of-code/index.html
@@ -9,10 +9,12 @@
 
 <body>
     <h1>Nature of Code</h1>
+    <p><a href="../">← Back to Home</a></p>
     <ul>
         <li><a href="chapter-00-introduction/index.html">Chapter 00 - Introduction</a></li>
         <li><a href="chapter-01-vectors/index.html">Chapter 01 - Vectors</a></li>
         <li><a href="chapter-02-forces/index.html">Chapter 02 - Forces</a></li>
+        <li><a href="ecosystem-project/index.html">Ecosystem Project</a></li>
     </ul>
 </body>
 
