--- a/simulations/index.html
+++ b/simulations/index.html
@@ -7,8 +7,15 @@
 </head>
 <body>
     <h1>Simulations</h1>
+    <p><a href="../">← Back to Home</a></p>
     <ul>
         <li><a href="fourier-transform/index.html">Fourier Transform</a></li>
+        <li><a href="bouncing-ball/index.html">Bouncing Ball</a></li>
+        <li><a href="falling-sand/index.html">Falling Sand</a></li>
+        <li><a href="temperature/index.html">Temperature</a></li>
+        <li><a href="sandbox/index.html">Sandbox</a></li>
+        <li><a href="pi/script.js">Pi Simulation</a></li>
+        <li><a href="ants/">Ants</a></li>
     </ul>
 </body>
 </html>
