--- a/games/index.html
+++ b/games/index.html
@@ -10,6 +10,8 @@
 </head>
 
 <body>
+    <h1>Games</h1>
+    <p><a href="../">← Back to Home</a></p>
     <ul class="links">
         <li><a href="animations">Sprite Animations</a></li>
         <li><a href="parallax">Parallax</a></li>
@@ -19,7 +21,6 @@
         <li><a href="bouncing">Bouncing</a></li>
         <li><a href="animations-on-trigger">Animations on Trigger</a></li>
         <li><a href="point-and-shoot-game">Point and Shoot Game</a></li>
-        <li><a href="box-breathing">Box Breathing</a></li>
         <li><a href="enemy-variety">Enemy Variety</a></li>
         <li><a href="side-scroller">Side Scroller</a></li>
         <li><a href="state-management">State Management</a></li>
@@ -27,6 +28,9 @@
         <li><a href="pong">Pong</a></li>
         <li><a href="flappy-bird">Flappy Bird</a></li>
         <li><a href="breakout">Breakout</a></li>
+        <li><a href="ice-riddle">Ice Riddle</a></li>
+        <li><a href="sandbox-3d">Sandbox 3D</a></li>
+        <li><a href="color-mixing-game">Color Mixing Game</a></li>
     </ul>
 </body>
 
