--- a/tools/index.html
+++ b/tools/index.html
@@ -10,8 +10,11 @@
 </head>
 
 <body>
+    <h1>Tools</h1>
+    <p><a href="../">← Back to Home</a></p>
     <ul class="links">
         <li><a href="chemex">Chemex</a></li>
+        <li><a href="weather">Weather</a></li>
     </ul>
 </body>
 
