Update growth accounting legend with clearer definitions
Clarify teacher state definitions to better match the underlying SQL logic:
- New: Specify comparison to same month last year instead of "never activated"
- Resurrected: Use "activated previously" for clearer temporal reference
- Churned: Use consistent "Not L28" phrasing and "was L28" for past tense
- Dormant: Replace vague "cutoff date" with specific "past 12 months" timeframe
- Never Activated: Simplify to "never been L28" for consistency
- At Risk: Provide precise criteria based on recent activity patterns

These updates improve user understanding of the classification system.

--- a/simulations/monthly-teacher-growth/index.html
+++ b/simulations/monthly-teacher-growth/index.html
@@ -73,7 +73,7 @@
         <div class="legend-grid">
             <div class="legend-item">
                 <div class="legend-color" style="background-color: #10b981;"></div>
-                <span><strong>New:</strong> L28 this month, never activated before</span>
+                <span><strong>New:</strong> L28 this month, not activated same month last year</span>
             </div>
             <div class="legend-item">
                 <div class="legend-color" style="background-color: #059669;"></div>
@@ -81,23 +81,23 @@
             </div>
             <div class="legend-item">
                 <div class="legend-color" style="background-color: #84cc16;"></div>
-                <span><strong>Resurrected:</strong> L28 this month, not same month last year, but had activated</span>
+                <span><strong>Resurrected:</strong> L28 this month, not same month last year, but activated previously</span>
             </div>
             <div class="legend-item">
                 <div class="legend-color" style="background-color: #f59e0b;"></div>
-                <span><strong>Churned:</strong> NOT L28 this month, L28 same month last year</span>
+                <span><strong>Churned:</strong> Not L28 this month, was L28 same month last year</span>
             </div>
             <div class="legend-item">
                 <div class="legend-color" style="background-color: #6b7280;"></div>
-                <span><strong>Dormant:</strong> Last communicated before cutoff date</span>
+                <span><strong>Dormant:</strong> Has activated but has not communicated in the past 12 months</span>
             </div>
             <div class="legend-item">
                 <div class="legend-color" style="background-color: #d1d5db;"></div>
-                <span><strong>Never Activated:</strong> Has never communicated</span>
+                <span><strong>Never Activated:</strong> Has never been L28</span>
             </div>
             <div class="legend-item">
                 <div class="legend-color" style="background-color: #9ca3af;"></div>
-                <span><strong>At Risk:</strong> Communicated between dates but not currently active</span>
+                <span><strong>At Risk:</strong> Has been L28 in the past 12 months but is not L28 this month or the same month last year</span>
             </div>
         </div>
     </div>
