Add projectile area invariant simulation
Demonstrates that projectiles with equal Vx*Vy products land at the
same distance. Features draggable V2 constrained to iso-area hyperbola,
RK4 integration for physics, and trail visualization.

--- a/simulations/index.html
+++ b/simulations/index.html
@@ -9,6 +9,7 @@
     <h1>Simulations</h1>
     <p><a href="../">← Back to Home</a></p>
     <ul>
+        <li><a href="projectile-area/index.html">Projectile Area Invariant</a></li>
         <li><a href="fourier-transform/index.html">Fourier Transform</a></li>
         <li><a href="bouncing-ball/index.html">Bouncing Ball</a></li>
         <li><a href="falling-sand/index.html">Falling Sand</a></li>
