--- a/simulations/index.html
+++ b/simulations/index.html
@@ -9,6 +9,7 @@
     <h1>Simulations</h1>
     <p><a href="../">← Back to Home</a></p>
     <ul>
+        <li><a href="random-circle/index.html">Random Points in a Circle</a></li>
         <li><a href="projectile-area/index.html">Projectile Area Invariant</a></li>
         <li><a href="fourier-transform/index.html">Fourier Transform</a></li>
         <li><a href="bouncing-ball/index.html">Bouncing Ball</a></li>
