--- a/index.html
+++ b/index.html
@@ -62,31 +62,31 @@
             <p>Card matching game using projective plane geometry (Galois field GF(7)) to generate valid symbol combinations.</p>
         </li>
         <li>
-            <a href="simulations/random-circle">Random Circle Points</a>
+            <a href="random-circle">Random Circle Points</a>
             <p>Compares 5 algorithms for uniform random point distribution in a circle, showing why the naive approach fails.</p>
         </li>
         <li>
-            <a href="simulations/projectile-area">Projectile Area Invariant</a>
+            <a href="projectile-area">Projectile Area Invariant</a>
             <p>Demonstrates that projectiles with equal Vx × Vy products land at the same distance.</p>
         </li>
         <li>
-            <a href="games/space-shooter">Space Shooter</a>
+            <a href="space-shooter">Space Shooter</a>
             <p>Asteroid defense game with intelligent projectile swarm AI featuring 10 distinct behavioral personalities.</p>
         </li>
         <li>
-            <a href="games/color-mixing">Color Mixing</a>
+            <a href="color-mixing-game">Color Mixing</a>
             <p>Educational game using Mixbox for accurate subtractive color mixing.</p>
         </li>
         <li>
-            <a href="tools/weather">Weather Forecast</a>
+            <a href="weather">Weather Forecast</a>
             <p>Netherlands rainfall predictions from KNMI radar data, updated every 15 minutes.</p>
         </li>
         <li>
-            <a href="simulations/temperature">Temperature Simulation</a>
+            <a href="temperature">Temperature Simulation</a>
             <p>Particle system visualizing kinetic energy and temperature through movement and collisions.</p>
         </li>
         <li>
-            <a href="simulations/fourier-transform">Fourier Transform</a>
+            <a href="fourier-transform">Fourier Transform</a>
             <p>Visualization of Fourier series decomposition and harmonic synthesis.</p>
         </li>
         <li>
@@ -98,11 +98,11 @@
             <p>Activity grid visualization powered by in-browser SQLite.</p>
         </li>
         <li>
-            <a href="games/lighting">Lighting</a>
+            <a href="lighting">Lighting</a>
             <p>Interactive 2D shadow casting with draggable light source and obstacles.</p>
         </li>
         <li>
-            <a href="games/making-rays">Making Rays</a>
+            <a href="making-rays">Making Rays</a>
             <p>Ray casting visualization with configurable rays and wall intersections.</p>
         </li>
     </ul>
