Add ambient music generator inspired by Brian Eno

--- a/index.html
+++ b/index.html
@@ -94,6 +94,10 @@
             <p>Guided breathing exercise with animated visualization for relaxation and focus.</p>
         </li>
         <li>
+            <a href="ambient-generator">Ambient Generator</a>
+            <p>Brian Eno-inspired generative ambient music with 7 independent loops that never exactly repeat.</p>
+        </li>
+        <li>
             <a href="growth-model">Growth Model</a>
             <p>Activity grid visualization powered by in-browser SQLite.</p>
         </li>
