--- a/ambient-generator/index.html
+++ b/ambient-generator/index.html
@@ -22,6 +22,7 @@
         <p class="subtitle">7 loops in D Mixolydian - patterns never exactly repeat</p>
     </div>
 
+    <script src="https://unpkg.com/tone@14"></script>
     <script type="module" src="script.js"></script>
 </body>
 </html>
