Add planetary orbital cycles to ambient generator
Replace 7 arbitrary loops with 8 planet-based cycles. Each planet's
cycle length is proportional to its real orbital period, compressed
via cube root to keep Neptune (~114s) reasonable relative to Mercury
(~13s). Inner planets play higher notes, outer planets lower.

--- a/ambient-generator/index.html
+++ b/ambient-generator/index.html
@@ -19,7 +19,7 @@
 
     <div class="info">
         <p>Generative ambient music inspired by Brian Eno</p>
-        <p class="subtitle">7 loops in D Mixolydian - patterns never exactly repeat</p>
+        <p class="subtitle">8 planetary orbits in D Mixolydian - cycles proportional to real orbital periods</p>
     </div>
 
     <script src="https://unpkg.com/tone@14"></script>
